# seeker

Azure_Kinect_ROS_Driver/: follower.py
Azure_Kinect_ROS_Driver/launch/: driver.launch  filter_points.launch  follow.launch
Azure_Kinect_ROS_Driver/rviz/: rviz.rviz
driver/fdilink_ahrs/: wheeltec_udev.sh
driver/fdilink_ahrs/launch/: ahrs_data.launch  tf.launch
driver/fdilink_ahrs/src/: imu_tf.cpp
driver/lakibeam1/launch/: lakibeam1_scan.launch
driver/lakibeam1/src/: lakibeam1_pcd.cpp  lakibeam1_scan.cpp
mrobot/: README.md  mrobot_prereq.sh
mrobot/artificial_potential_fields/src/: APF.cpp
mrobot/mrobot/: CHANGLOG.rst  CMakeLists.txt  package.xml
mrobot/mrobot_bringup/: package.xml
mrobot/mrobot_bringup/include/: mrobot.h
mrobot/mrobot_bringup/launch/: mrobot.launch  mrobot_all.launch  mrobot_core.launch  mrobot_laser.launch  mrobot_test.launch  mrobot_with_laser.launch  mrobot_with_laser.launch.back  rplidar.launch
mrobot/mrobot_bringup/launch/backup/: mrobot (copy).launch  mrobot_with_camera.launch  mrobot_with_laser.launch  usb_cam.launch
mrobot/mrobot_bringup/scripts/: calibrate_angular.py  calibrate_linear.py  move_base_square.py  nav_square.py  odom_ekf.py  odom_out_and_back.py  timed_out_and_back.py
mrobot/mrobot_bringup/src/: .serial_node.cpp.swp  mrobot.cpp  mrobot_bringup.cpp
mrobot/mrobot_description/: mrobot.rviz  package.xml
mrobot/mrobot_description/launch/: display_model.launch
mrobot/mrobot_description/urdf/: mrobot.urdf
mrobot/mrobot_navigation/: CMakeLists.txt  package.xml
mrobot/mrobot_navigation/config/mrobot/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
mrobot/mrobot_navigation/launch/: amcl.launch.back  dwa_nav.launch  mrobot_navigation.launch  multi_goals.launch  nav_demo.launch  navigation.launch  slam.launch  slam_solo.launch  teb_nav.launch
mrobot/mrobot_navigation/launch/backup/: follow.launch  mrobot_slam.launch  nav_demo（复件）.launch  shopping_demo.launch  test.launch
mrobot/mrobot_navigation/launch/include/: laser_filter.launch  loc2d.launch  localization_fusion.launch  move_base.launch
mrobot/mrobot_navigation/maps/: map.pgm  map.yaml  test_map.pgm  test_map.yaml
mrobot/mrobot_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  laser_config.yaml  local_costmap_params.yaml  move_base_params.yaml
mrobot/mrobot_navigation/param/backup/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  move_base_params.yaml
mrobot/mrobot_navigation/param/cartographer/: slam.lua
mrobot/mrobot_navigation/param/move_base/: base_global_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
mrobot/mrobot_navigation/rviz/: mrobot_nav.rviz  nav.rviz
mrobot/mrobot_navigation/scripts/: exploring_slam.py  follower.py  multi_goals.py  random_navigation.py
mrobot/mrobot_teleop/: CMakeLists.txt  package.xml
mrobot/mrobot_teleop/lanuch/: mrobot_teleop_joystick.launch  mrobot_teleop_key.launch
mrobot/mrobot_teleop/scripts/: mrobot_teleop_key.py
mrobot/mrobot_teleop/src/: mrobot_teleop_joystick.cpp
mrobot/seeker_description/: CMakeLists.txt  package.xml
mrobot/seeker_description/config/: joint_names_seeker_description.yaml
mrobot/seeker_description/launch/: display.launch  gazebo.launch
mrobot/seeker_description/meshes/: back_left_link.STL  back_right_link.STL  front_left_link.STL  front_right_link.STL  laser.STL
mrobot/seeker_description/urdf/: seeker_description.csv  seeker_description.urdf
mrobot/startup/: CMakeLists.txt  package.xml
mrobot/startup/scripts/: initenv.sh  mrobot.rules
