<?xml version="1.0"?>
<package>
  <name>mrobot_navigation</name>
  <version>0.1.0</version>
  <description>
    The mrobot_navigation package
  </description>
  <license>Apache License 2.0</license>
  <author email="rosclub@modinge.com">Ray</author>
  <author email="rosclub@modinge.com">dajianli</author>
  <maintainer email="rosclub@modinge.com">Ray</maintainer>
  <url type="bugtracker">http://www.rosclub.com/ROSClub/mrobot/issues</url>
  <url type="repository">http://www.rosclub.com/ROSClub/mrobot</url>
  <url type="website">http://www.rosclub.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
